@@ -5,6 +5,8 @@
 - Fixed TileDrawable not applying its scale correctly.
 - API Addition: Added epsilon methods to maps with float values.
 - API Addition: Added an insertRange method to array collections.
+- Fixed GestureDetector maxFlingDelay.
+- API Change: Changed default GestureDetector maxFlingDelay to Integer.MAX_VALUE (didn't work before, this matches that).
 
 [1.9.11]
 - Update to MobiVM 2.3.8
